lot of detail changes

--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -12,7 +12,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         {% buttons %}
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit" class="btn btn-primary mt-2">Add Comment</button>
                         {% endbuttons %}
                     </form>
                 {% endif %}
@@ -22,7 +22,7 @@
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary mt-2">Add Comment</button>
                     {% endbuttons %}
                 </form>
             {% endif %}
