--- a/blog/templates/blog/post_confirm_delete.html
+++ b/blog/templates/blog/post_confirm_delete.html
@@ -10,7 +10,7 @@
 
         {{ form.as_p }}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Delete Post</button>
+            <button type="submit" class="btn btn-primary mt-2">Delete Post</button>
         {% endbuttons %}
     </form>
 
