--- a/khoBlog/templates/account/connections.html
+++ b/khoBlog/templates/account/connections.html
@@ -34,7 +34,7 @@
                 {% endfor %}
 
                 <div>
-                    <button class="btn btn-secondary" type="submit">Remove</button>
+                    <button type="submit" class="btn btn-secondary mt-2">Remove</button>
                 </div>
 
             </fieldset>
