--- a/khoBlog/templates/account/email.html
+++ b/khoBlog/templates/account/email.html
@@ -52,7 +52,7 @@
             {% csrf_token %}
             {% bootstrap_form form %}
             {% buttons %}
-                <button type="submit" class="btn btn-primary mt-2" type="submit">{% trans "Add E-mail" %}</button>
+                <button type="submit" class="btn btn-primary mt-2">{% trans "Add E-mail" %}</button>
             {% endbuttons %}
         </form>
     {% endif %}
