--- a/blog/templates/blog/ar_post_comment.html
+++ b/blog/templates/blog/ar_post_comment.html
@@ -11,7 +11,7 @@
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
-                        <button type="submit" class="btn btn-primary">Confirm</button>
+                        <button type="submit" class="btn btn-primary mt-2">Remove</button>
                     {% endbuttons %}
                 </form>
                 {{ form.media }}
@@ -26,7 +26,7 @@
                     {% csrf_token %}
                     {% bootstrap_form form %}
                     {% buttons %}
-                        <button type="submit" class="btn btn-primary">Confirm</button>
+                        <button type="submit" class="btn btn-primary mt-2">Approve</button>
                     {% endbuttons %}
                 </form>
                 {{ form.media }}
