--- a/blog/templates/blog/includes/post_comments_messages.html
+++ b/blog/templates/blog/includes/post_comments_messages.html
@@ -29,7 +29,7 @@
 
                                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="commentActionsDropdown">
                                     {% if user.is_superuser %}
-                                        {% if not comment.approved_comment %}
+                                        {% if not comment.approbation_state == 'AP' %}
                                             <a class="dropdown-item" href="{% url 'blog:comment_approve' pk_post=comment.related_post.pk pk=comment.pk %}">
                                                 <i class="bi bi-check2-square"></i> Approve
                                             </a>
@@ -40,7 +40,7 @@
                                         </a>
                                     {% endif %}
 
-                                    {% if comment.approved_comment %}
+                                    {% if comment.approbation_state == 'AP' %}
                                         {% if user.is_superuser %}
                                             <div class="dropdown-divider"></div>
                                         {% endif %}
