--- a/khoBlog/templates/account/change_password.html
+++ b/khoBlog/templates/account/change_password.html
@@ -1,15 +1,18 @@
 {% extends "sub_base.html" %}
 {% load bootstrap5 %}
 
-{% block title %} - Change Password{% endblock title %}
+{% block title %} - {{ title }}{% endblock title %}
+
+{% block page_top_title %}
+    <h2>{{ title }}</h2>
+{% endblock page_top_title %}
 
 {% block content %}
-    <h2>Change Password</h2>
     <form method="POST" enctype="multipart/form-data" class="form">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary mt-2">Change Password</button>
         {% endbuttons %}
     </form>
 {% endblock content %}
