--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -14,7 +14,7 @@
                 {% csrf_token %}
                 {% bootstrap_form form %}
                 {% buttons %}
-                    <button type="submit" class="btn btn-primary">Update profile</button>
+                    <button type="submit" class="btn btn-primary mt-2">Update profile</button>
                 {% endbuttons %}
             </form>
 
