--- a/khoBlog/templates/account/signup.html
+++ b/khoBlog/templates/account/signup.html
@@ -1,15 +1,18 @@
 {% extends 'sub_base.html' %}
 {% load bootstrap5 %}
 
-{% block title %} - Sign Up{% endblock title %}
+{% block title %} - Sign up{% endblock title %}
+
+{% block page_top_title %}
+    <h2>Sign up</h2>
+{% endblock page_top_title %}
 
 {% block content %}
-    <h2>Signup</h2>
     <form method="POST" enctype="multipart/form-data" class="form">
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-primary">Save</button>
+            <button type="submit" class="btn btn-primary mt-2">Sign up</button>
         {% endbuttons %}
     </form>
 {% endblock content %}
