--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -11,6 +11,6 @@
             <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
             <label for="choice{{ forloop.counter }}">{{ choice.choice_text }}</label><br>
         {% endfor %}
-        <input class="btn btn-primary" type="submit" value="Vote">
+        <input class="btn btn-primary mt-2" type="submit" value="Vote">
     </form>
 {% endblock main %}
