search and naming all stuff the same way
huge changes in the search things, renamed a lot of fields so they all have a similar name

--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -12,7 +12,7 @@
                         {% csrf_token %}
                         {% bootstrap_form form %}
                         {% buttons %}
-                            <button type="submit" class="btn btn-primary mt-2">Add Comment</button>
+                            <button type="submit" class="btn btn-primary mt-2">Edit Comment</button>
                         {% endbuttons %}
                     </form>
                 {% endif %}
