--- a/blog/templates/blog/includes/featured_posts.html
+++ b/blog/templates/blog/includes/featured_posts.html
@@ -13,7 +13,7 @@
 
 <div class="row row-cols-1 row-cols-lg-2">
     {% for post in featured %}
-        <div class="card-deck mb-2 {% cycle 'pe-lg-0' 'pe-kho-lg-12' %}">
+        <div class="mb-2 {% cycle 'pe-lg-0' 'pe-kho-lg-12' %}">
             <div class="card shadow h-100">
                 <div class="card-header">
                     <strong>
