--- a/khoBlog/templates/400.html
+++ b/khoBlog/templates/400.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block page_top_title %}
-    <h2>Error 400
+    <h2 class="clearfix">Error 400
         <a class="btn btn-primary float-end" href="{% url 'blog:latest' %}">
             Latest Post
         </a>
