--- a/khoBlog/templates/includes/nav/nav_list.html
+++ b/khoBlog/templates/includes/nav/nav_list.html
@@ -1,17 +1,19 @@
+{% load instance %}
+
 <h4 class="fst-italic">
     {% with context.request.resolver_match.view_name as view_name %}
         {% if view_name != 'pages:page_detail' and view_name != 'pages:page_list' and view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-            {% if view_name != 'blog:category_list' %}
+            {% if view_name != 'blog:category_list' and view_name != 'blog:search' and view_name != 'blog:search_results' %}
                 Post
-            {% else %}
+            {% elif view_name != 'blog:search' and view_name != 'blog:search_results' %}
                 Category
-            {% endif %}
-        {% else %}
-            {% if view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-                Page
             {% else %}
-                Project
+                Search Results
             {% endif %}
+        {% elif view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
+            Page
+        {% else %}
+            Project
         {% endif %}
     {% endwith %}
     List
@@ -19,15 +21,25 @@
 <ol class="list-unstyled mb-0">
     {% with context.request.resolver_match.view_name as view_name %}
         {% if view_name != 'pages:page_detail' and view_name != 'pages:page_list' and view_name != 'portfolio:project_list' and view_name != 'portfolio:project_detail' %}
-            {% if view_name != 'post:post_list' and view_name != 'blog:category_list' %}
+            {% if view_name != 'post:post_list' and view_name != 'blog:category_list' and view_name != 'blog:search' and view_name != 'blog:search_results' %}
                 {% for post in context.posts %}
                     {% if forloop.counter <= 21 %}
                         <li>{{ post.id }} - <a href="{{ post.get_absolute_url }}">{{ post.title }}</a></li>
                     {% endif %}
                 {% endfor %}
-            {% else %}
+            {% elif view_name != 'blog:search' and view_name != 'blog:search_results' %}
                 {% for cat in context.category_list %}
-                    <li>{{ cat.id }} - <a href="{{ context.cat.get_absolute_url }}">{{ cat.name }}</a></li>
+                    <li>{{ cat.id }} - <a href="{{ cat.get_absolute_url }}">{{ cat.title }}</a></li>
+                {% endfor %}
+            {% else %}
+                {% for element in context.query %}
+                    {% if context.query|isinstance:'list' %}
+                        {% for e in element %}
+                            <li>{{ e.id }} - <a href="{{ e.get_absolute_url }}">{% firstof e.title e %}</a></li>
+                        {% endfor %}
+                    {% else %}
+                        <li>{{ element.id }} - <a href="{{ element.get_absolute_url }}">{% firstof element.title element %}</a></li>
+                    {% endif %}
                 {% endfor %}
             {% endif %}
         {% else %}
