--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -5,7 +5,7 @@
 {% block content_main %}
     <div class="row row-cols-1 row-cols-lg-3">
         {% for cat in category_list %}
-            <div class="card-deck mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+            <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
                 <div id="category-{{ cat.slug }}" class="card shadow h-100">
 
                     <div class="card-header">
@@ -32,7 +32,7 @@
                         </span>
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title">{{ cat.name }}</h3>
+                        <h3 class="card-title">{{ cat.title }}</h3>
                         <p class="mb-auto">{{ cat.description }}</p>
                         <p class="mb-auto">Category Slug: {{ cat.slug }}</p>
                     </div>
