--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
 
     <div class="row row-cols-1 row-cols-lg-3">
         {% for post in posts %}
-            <div class="card-deck mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+            <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
                 <div id="post-{{ post.slug }}" class="card shadow h-100">
 
                     {% if post.published_date %}
