--- a/khoBlog/templates/includes/nav/search/small_search.html
+++ b/khoBlog/templates/includes/nav/search/small_search.html
@@ -1,9 +1,9 @@
 <form action="{% url 'blog:search_results' %}" class="d-block d-lg-none" method="get">
     <div class="input-group">
         <div class="input-group-prepend">
-            <span class="input-group-text" id="search">Search</span>
+            <span class="input-group-text" id="search"><a href="{% url 'blog:search' %}">Search</a></span>
         </div>
-        <input type="text" class="form-control" id="post_search" placeholder="Search a post" name="q"
+        <input type="text" class="form-control" id="post_search" placeholder="Search" name="q"
             aria-label="search" aria-describedby="search">
     </div>
 </form>
