--- a/pages/templates/pages/page_list.html
+++ b/pages/templates/pages/page_list.html
@@ -8,7 +8,7 @@
 {% block main %}
     <div class="row row-cols-1 row-cols-lg-3">
         {% for page in pages %}
-            <div class="card-deck mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
+            <div class="mb-2 {% cycle 'pe-lg-0' 'pe-lg-0' 'pe-kho-lg-12' %}">
                 <div id="page-{{ page.slug }}" class="card shadow h-100">
 
                     <div class="card-header">
