--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -38,7 +38,7 @@
 
             <div class="card-body">
                 <h2 class="card-title">{{ post.title }}</h2>
-                <div class="blog-post-meta">
+                <div>
                     <p class="mb-auto text-muted">{{ post.body|readtime }}</p>
                     {% include 'blog/includes/post_dates.html' %}
                 </div>
