--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -69,7 +69,7 @@
                 <div class="card-body">
                     {% for comment in comments %}
                         {% if comment.author_logged.id == object.id and comment.approbation_state == 'AP' or comment.author_logged.id == object.id and user.is_superuser %}
-                            <p class="mb-0"><a href="{{ comment.get_absolute_url }}#comment-{{ comment.id }}">{{ comment.related_post }} - {{comment.message}}</a></p>
+                            <p class="mb-0"><a href="{{ comment.get_absolute_url }}#comment-{{ comment.id }}">{{ comment.related_post }} - {{comment.body}}</a></p>
                         {% endif %}
                     {% endfor %}
                 </div>
