--- a/blog/templates/blog/includes/post_comments_messages.html
+++ b/blog/templates/blog/includes/post_comments_messages.html
@@ -64,11 +64,8 @@
                 {{ comment.created_date|date:'l, d F Y' }} - {{ comment.created_date|time:"G:i:s" }} {% if comment.comment_answer %}<a href="{{ post.get_absolute_url }}#comment-{{ comment.comment_answer.id }}"><small>&lt;Related Comment&gt;</small></a>{% endif %}
             </div>
             {% autoescape on %}
-                <span class="card-text">{{ comment.body|safe }}</span>
+                <span class="card-text">{{ comment.body }}</span>
             {% endautoescape %}
-            {% if post.url_post_type %}
-                <a class="card-link" href="{{ post.url_post_type }}">{{ post.url_post_type_name }}</a>
-            {% endif %}
         </div>
         <div class="card-footer">
             <div class="btn-group-vertical d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
