again lots of small changes and one bug fix, updated Bootstrap

--- a/blog/templates/blog/base_post.html
+++ b/blog/templates/blog/base_post.html
@@ -130,6 +130,9 @@
 
 {% endblock page_head %}
 
+{% block page_top_title %}
+{{ block.super }}
+{% endblock page_top_title %}
 
 {% block content %}
     {% block main %}
