--- a/khoBlog/templates/account/email_confirm.html
+++ b/khoBlog/templates/account/email_confirm.html
@@ -4,7 +4,7 @@
 {% load account %}
 
 {% block page_top_title %}
-    <h2>{% trans "Confirm E-mail Address" %}</h2>
+    {% trans "Confirm E-mail Address" %}
 {% endblock page_top_title %}
 
 {% block content %}
