--- a/khoBlog/templates/account/login.html
+++ b/khoBlog/templates/account/login.html
@@ -4,7 +4,7 @@
 {% block title %} - Log in{% endblock title %}
 
 {% block page_top_title %}
-    <h2>Log in</h2>
+    Log in
 {% endblock page_top_title %}
 
 {% block content %}
