--- a/khoBlog/templates/account/logout.html
+++ b/khoBlog/templates/account/logout.html
@@ -3,9 +3,9 @@
 
 {% block title %} - Log out{% endblock title %}
 
-{% block page_top_title %}
-    <h2>Log out</h2>
-{% endblock page_top_title %}
+{% block page_top %}
+    Log out
+{% endblock page_top %}
 
 {% block content %}
     <form method="POST" class="form">
