--- a/khoBlog/templates/account/signup.html
+++ b/khoBlog/templates/account/signup.html
@@ -4,7 +4,7 @@
 {% block title %} - Sign up{% endblock title %}
 
 {% block page_top_title %}
-    <h2>Sign up</h2>
+    Sign up
 {% endblock page_top_title %}
 
 {% block content %}
