--- a/khoBlog/templates/account/verification_sent.html
+++ b/khoBlog/templates/account/verification_sent.html
@@ -3,7 +3,7 @@
 {% block title %} - Verify email{% endblock title %}
 
 {% block page_top_title %}
-    <h2>Verify Your E-mail Address</h2>
+    Verify Your E-mail Address
 {% endblock page_top_title %}
 
 {% block content %}
