--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -36,7 +36,7 @@
                                 <strong><a href="{{ post.categories.first.get_absolute_url }}">{{ post.categories.first|capfirst }}</a></strong>
                                 <p class="mb-0 text-muted">{{ post.body|readtime }}</p>
                             </span>
-                            <span class="col-1">
+                            <span class="col-auto mx-2">
                                 <span class="badge bg-secondary d-flex justify-content-center" data-bs-toggle="tooltip" data-bs-placement="top" title="{{ post.get_language_display }}">{{ post.language }}</span>
                             </span>
                             <span class="col">
