--- a/khoBlog/templates/account/email.html
+++ b/khoBlog/templates/account/email.html
@@ -4,7 +4,7 @@
 {% load i18n %}
 
 {% block page_top_title %}
-    <h2>{% trans "E-mail Addresses" %}</h2>
+    {% trans "E-mail Addresses" %}
 {% endblock page_top_title %}
 
 {% block content %}
