--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -20,15 +20,13 @@
     <meta property="twitter:description" content="{{ object.bio }}">
 {% endblock page_head %}
 
-{% block page_top_title %}
-        <h2 class="clearfix">{{ title }}
-        {% if user.is_superuser %}
-            <a class="btn btn-danger float-end" href="{% url 'admin:accounts_customuser_delete' object_id=object.id %}">
-                <i class="bi bi-trash"></i> Delete in Admin
-            </a>
-        {% endif %}
-    </h2>
-{% endblock page_top_title %}
+{% block page_top_end %}
+    {% if user.is_superuser %}
+        <a class="btn btn-danger float-end" href="{% url 'admin:accounts_customuser_delete' object_id=object.id %}">
+            <i class="bi bi-trash"></i> Delete in Admin
+        </a>
+    {% endif %}
+{% endblock page_top_end %}
 
 {% block content %}
     <div class="card mb-2 shadow">
