--- a/khoBlog/templates/includes/nav/search/small_search.html
+++ b/khoBlog/templates/includes/nav/search/small_search.html
@@ -1,4 +1,4 @@
-<form action="{% url 'blog:search_results' %}" class="d-block d-lg-none" method="get">
+<form action="{{ search_url }}" class="d-block d-lg-none" method="get">
     <div class="input-group">
         <div class="input-group-prepend">
             <span class="input-group-text" id="search_label_small"><a href="{% url 'blog:search' %}">Search</a></span>
