--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -19,7 +19,7 @@
                             {% if link.visibility == 'NP' %}
                                 {% if context.perms.settings_app.view_linkssidemenu %}
                                     {% if link.rel_url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="/{{ link.rel_url }}">{{ link.title }}</a>
+                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
                                     {% elif link.url %}
                                         <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
                                     {% endif %}
@@ -27,22 +27,24 @@
                             {% elif link.visibility == 'NS' %}
                                 {% if context.user.is_staff %}
                                     {% if link.rel_url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="/{{ link.rel_url }}">{{ link.title }}</a>
+                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
                                     {% elif link.url %}
                                         <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
                                     {% endif %}
                                 {% endif %}
                             {% else %}
-                                {% if link.rel_url %}
-                                    <a class="btn btn-{{ link.get_link_css_classes_display }}" href="/{{ link.rel_url }}">{{ link.title }}</a>
-                                {% elif link.url %}
-                                    <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
+                                {% if context.user.is_superuser %}
+                                    {% if link.rel_url %}
+                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
+                                    {% elif link.url %}
+                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
+                                    {% endif %}
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                     {% else %}
                         {% if link.rel_url %}
-                            <a class="btn btn-{{ link.get_link_css_classes_display }}" href="/{{ link.rel_url }}">{{ link.title }}</a>
+                            <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
                         {% elif link.url %}
                             <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
                         {% endif %}
