--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -62,15 +62,73 @@
                                 </span>
                             {% endif %}
                             <span class="col">
-                                <a role="button" class="float-end card-link" data-bs-toggle="modal"
+                                {% comment %} <a role="button" class="float-end card-link" data-bs-toggle="modal"
                                     data-bs-target="#postModal-{{ post.id }}">Post Info
-                                </a>
+                                </a> {% endcomment %}
+                                <a role="button" class="float-end card-link" data-bs-toggle="offcanvas" data-bs-target="#postModal-{{ post.id }}" aria-controls="postModal-{{ post.id }}">Post Info</a>
                             </span>
                         </span>
                     </div>
                 </div>
 
-                {% include 'blog/includes/post_modal.html' %}
+                {% comment %} {% include 'blog/includes/post_modal.html' %} {% endcomment %}
+
+                <div class="offcanvas offcanvas-end" data-bs-scroll="true" tabindex="-1" id="postModal-{{ post.id }}" aria-labelledby="postModal-{{ post.id }}Label">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="postModal-{{ post.id }}Label">{{ post.title }} - #{{ post.id }}</h5>
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="offcanvas" aria-label="Close">Close</button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <h6>General Information</h6>
+                        <p>
+                            <a href="{% url 'accounts:profile' slug=post.author.slug %}">
+                                Author:
+                                {{ post.author }} -
+                                {% if post.author.is_superuser %}
+                                    {% if post.author.owner %}
+                                        Website Owner
+                                    {% else %}
+                                        Admin
+                                    {% endif %}
+                                {% elif post.author.is_staff %}
+                                    Staff
+                                {% else %}
+                                    User
+                                {% endif %}
+                            </a>
+                        </p>
+                        <p>
+                            Created: {{ post.created_date|date:'l, d F Y H:m:s' }} <br />
+                            {% if post.published_date %}
+                                Published: {{ post.published_date|date:'l, d F Y H:m:s' }}
+                            {% endif %}
+                            {% if post.modified_date %}
+                                Updated: {{ post.modified_date|date:'l, d F Y H:m:s' }}
+                            {% endif %}
+                        </p>
+                        <p>
+                            {% if post.featured_title %}
+                                Featured Title: {{ post.featured_title }}
+                            {% endif %}
+                        </p>
+                        <p>
+                            Description: {{ post.description }}
+                        </p>
+                        <p>
+                            Clicks: {{ post.clicks }}
+                        </p>
+                        <p>
+                            Categories: <br />
+                            {% include 'blog/includes/post_categories.html' %}
+                        </p>
+                        {% if user.is_superuser %}
+                            <h6>Admin Information</h6>
+                            <p>Withdrawn: {{ post.withdrawn }}</p>
+                            <p>Scheduled: {% if post.published_date > now %}True{% else %}False{% endif %}</p>
+                        {% endif %}
+                    </div>
+
+                </div>
             </div>
         {% endfor %}
     </div>
