--- a/khoBlog/templates/account/logout.html
+++ b/khoBlog/templates/account/logout.html
@@ -3,9 +3,9 @@
 
 {% block title %} - Log out{% endblock title %}
 
-{% block page_top %}
+{% block page_top_title %}
     Log out
-{% endblock page_top %}
+{% endblock page_top_title %}
 
 {% block content %}
     <form method="POST" class="form">
