--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -87,6 +87,7 @@
 
         <!-- rel! Fonts / Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
         <!-- rel! Themes -->
         <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
