--- a/khoBlog/templates/sub_base.html
+++ b/khoBlog/templates/sub_base.html
@@ -2,7 +2,7 @@
 {% load side_menu_set %}
 
 {% block nav %}
-    {% setting sides %}
+    {% sm_setting sides %}
 
     {% block inside_nav %}
     {% endblock inside_nav %}
@@ -10,7 +10,7 @@
 {% endblock nav %}
 
 {% block aside %}
-    {% setting sides %}
+    {% sm_setting sides %}
 
     {% block inside_aside %}
     {% endblock inside_aside %}
