--- a/settings_app/templates/settings_app/side_menu_setting.html
+++ b/settings_app/templates/settings_app/side_menu_setting.html
@@ -18,36 +18,48 @@
                         {% if context.user.is_authenticated %}
                             {% if link.visibility == 'NP' %}
                                 {% if context.perms.settings_app.view_linkssidemenu %}
-                                    {% if link.rel_url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
-                                    {% elif link.url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
-                                    {% endif %}
+                                    <a class="btn btn-{{ link.get_link_css_classes_display }}" href="
+                                        {% if link.rel_url %}
+                                            {{ link.get_rel_url }}
+                                        {% elif link.url %}
+                                            {{ link.url }}
+                                        {% endif %}
+                                        ">{{ link.title }}
+                                    </a>
                                 {% endif %}
                             {% elif link.visibility == 'NS' %}
                                 {% if context.user.is_staff %}
-                                    {% if link.rel_url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
-                                    {% elif link.url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
-                                    {% endif %}
+                                    <a class="btn btn-{{ link.get_link_css_classes_display }}" href="
+                                        {% if link.rel_url %}
+                                            {{ link.get_rel_url }}
+                                        {% elif link.url %}
+                                            {{ link.url }}
+                                        {% endif %}
+                                        ">{{ link.title }}
+                                    </a>
                                 {% endif %}
                             {% else %}
                                 {% if context.user.is_superuser %}
-                                    {% if link.rel_url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
-                                    {% elif link.url %}
-                                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
-                                    {% endif %}
+                                    <a class="btn btn-{{ link.get_link_css_classes_display }}" href="
+                                        {% if link.rel_url %}
+                                            {{ link.get_rel_url }}
+                                        {% elif link.url %}
+                                            {{ link.url }}
+                                        {% endif %}
+                                        ">{{ link.title }}
+                                    </a>
                                 {% endif %}
                             {% endif %}
                         {% endif %}
                     {% else %}
-                        {% if link.rel_url %}
-                            <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.get_rel_url }}">{{ link.title }}</a>
-                        {% elif link.url %}
-                            <a class="btn btn-{{ link.get_link_css_classes_display }}" href="{{ link.url }}">{{ link.title }}</a>
-                        {% endif %}
+                        <a class="btn btn-{{ link.get_link_css_classes_display }}" href="
+                            {% if link.rel_url %}
+                                {{ link.get_rel_url }}
+                            {% elif link.url %}
+                                {{ link.url }}
+                            {% endif %}
+                            ">{{ link.title }}
+                        </a>
                     {% endif %}
                 {% endfor %}
             </div>
