--- a/settings_app/templates/settings_app/footer_setting.html
+++ b/settings_app/templates/settings_app/footer_setting.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 {% for footer in footers %}
     {% for link in footer.footer_links.all %}
         <div class="{{ link.parent_css_classes }}">
@@ -11,7 +13,7 @@
                 {% endif %}
                 ">
                 {% if link.child_img %}
-                    <img src="{{ link.child_img }}" width="50" alt="{{ link.title }}" />
+                    <img src="{% static link.child_img %}" width="50" alt="{{ link.title }}" />
                 {% else %}
                     {{ link.title }}
                 {% endif %}
