--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -79,6 +79,7 @@
     </title>
 
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
 
     <script src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
 
@@ -88,7 +89,6 @@
 
         <!-- rel! Fonts / Icons -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
 
         <!-- rel! Themes -->
         <link rel="stylesheet" href="{% static 'khoBlog/css/highlight.css' %}">
